# docs-assistant

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  doc.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
rag/: __init__.py  config.py  evaluator.py  processor.py  rag_chain.py  scraper.py  vector_store.py  web_ui.py
rag/ingestion/: __init__.py  processor.py  scraper.py  vector_store.py
rag/query/: __init__.py  rag_chain.py  web_ui.py
