[project]
name = "pingid-docs-assistant"
version = "1.0.0"
description = "AI assistant for PingIdentity documentation"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "W293",   # blank line contains whitespace (handled by formatter)
    "B008",   # function call in default argument (typer.Option pattern)
    "F403",   # star imports
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
